--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.12.10",
     "chai": "^3.5.0",
+    "eslint": "^2.11.1",
+    "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
