--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^2.0.0-alpha"
   }
 }
